scripts/firewall/rules.v6
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

-N cjdns
-A INPUT -i tun0 -j cjdns
-A cjdns -j ACCEPT -m conntrack --ctstate NEW -p tcp -m multiport --dports 80,443,9100
-A cjdns -j REJECT --reject-with icmp6-port-unreachable

-A INPUT -m conntrack --ctstate NEW -p tcp -m multiport --dports 80,443,9100
-A INPUT -j ACCEPT -j REJECT --reject-with icmp6-port-unreachable
-A FORWARD -j REJECT --reject-with icmp6-port-unreachable

COMMIT
